// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div>
  <button
    className="src-shared-components-tc-communities-JoinCommunity-___style__link___mMDH0 "
    onClick={[Function]}
  >
    Join Community
  </button>
  <ConfirmModal
    communityName="ios"
    groupId="1"
    join={[Function]}
    resetJoinButton={[Function]}
    token="token"
    userId="useId"
  />
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div>
  <button
    className="src-shared-components-tc-communities-JoinCommunity-___style__link___mMDH0 src-shared-components-tc-communities-JoinCommunity-___style__joining___rq-m2"
    onClick={[Function]}
  >
    <div>
      <p>
        Joining...
      </p>
      <ThemedLoadingIndicator
        composeTheme="deeply"
        mapThemrProps={[Function]}
        theme={
          Object {
            "style": "src-shared-components-tc-communities-JoinCommunity-___style__loadingIndicator___2RP1u",
          }
        }
      />
    </div>
  </button>
</div>
`;

exports[`Matches shallow shapshot 3`] = `
<div
  className="src-shared-components-tc-communities-JoinCommunity-___style__placeholder___1XfW2"
/>
`;

exports[`Matches shallow shapshot 4`] = `
<div>
  <button
    className="src-shared-components-tc-communities-JoinCommunity-___style__link___mMDH0 "
    onClick={[Function]}
  >
    Join Community
  </button>
  <ThemedModal
    composeTheme="deeply"
    mapThemrProps={[Function]}
    onCancel={[Function]}
    theme={Object {}}
  >
    <h1
      className="src-shared-components-tc-communities-JoinCommunity-___style__modalTitle___1U_iw"
    >
      Congratulations!
    </h1>
    <p
      className="src-shared-components-tc-communities-JoinCommunity-___style__modalMsg___25f_a"
    >
      You have joined the 
      ios
      !
    </p>
    <button
      className="src-shared-components-tc-communities-JoinCommunity-___style__done___2m1SD"
      onClick={[Function]}
    >
      Return to the Community
    </button>
  </ThemedModal>
</div>
`;

exports[`Matches shallow shapshot 5`] = `
<div>
  <button
    className="src-shared-components-tc-communities-JoinCommunity-___style__link___mMDH0 "
    onClick={[Function]}
  >
    Join Community
  </button>
  <ConfirmModal
    communityName="ios"
    groupId="1"
    join={[Function]}
    resetJoinButton={[Function]}
    token={null}
    userId="useId"
  />
</div>
`;
